--20130304
alter table producto add column bien_de_cambio boolean not null default true;
ALTER TABLE detalle_recibo ALTER COLUMN factura_venta DROP NOT NULL;
ALTER TABLE detalle_recibo ADD COLUMN nota_debito_id integer;
ALTER TABLE detalle_recibo ADD FOREIGN KEY (nota_debito_id) REFERENCES nota_debito (id) ON UPDATE NO ACTION ON DELETE NO ACTION;
--20130301
ALTER TABLE sucursal ADD COLUMN notadebito_a NUMERIC(8,0) NOT NULL DEFAULT 1;
ALTER TABLE sucursal ADD COLUMN notadebito_b NUMERIC(8,0) NOT NULL DEFAULT 1;
ALTER TABLE sucursal ALTER COLUMN notadebito_a DROP DEFAULT;
ALTER TABLE sucursal ALTER COLUMN notadebito_b DROP DEFAULT;
CREATE TABLE nota_debito (
  id serial NOT NULL,
  numero numeric(8,0) NOT NULL,
  tipo character(1) NOT NULL,
  fecha_nota_debito date NOT NULL,
  fecha_carga timestamp with time zone NOT NULL DEFAULT now(),
  importe numeric(12,2) NOT NULL,
  usuario_id integer NOT NULL,
  cliente_id integer NOT NULL,
  sucursal_id integer NOT NULL,
  observacion character varying(200),
  gravado numeric(12,2) NOT NULL DEFAULT 0,
  no_gravado numeric(12,2) NOT NULL DEFAULT 0,
  iva10 numeric(12,2) NOT NULL DEFAULT 0,
  iva21 numeric(12,2) NOT NULL DEFAULT 0,
  otros_ivas numeric(12,2) NOT NULL DEFAULT 0,
  anulada boolean NOT NULL DEFAULT false,
  impuestos_recuperables numeric(12,2) NOT NULL DEFAULT 0,
  recibo_id integer,
  CONSTRAINT nota_debito_pkey PRIMARY KEY (id ),
  CONSTRAINT fk_nota_debito_cliente FOREIGN KEY (cliente_id) REFERENCES cliente (id),
  CONSTRAINT fk_nota_debito_sucursal FOREIGN KEY (sucursal_id) REFERENCES sucursal (id),
  CONSTRAINT fk_nota_debito_usuario FOREIGN KEY (usuario_id) REFERENCES usuario (id),
  CONSTRAINT fk_nota_debito_recibo FOREIGN KEY (recibo_id) REFERENCES recibo (id),
  CONSTRAINT unq_nota_debito_sucursal_id_tipo_numero UNIQUE (sucursal_id, tipo, numero)
) WITH (  OIDS=FALSE);
CREATE TABLE detalle_nota_debito (
  id serial NOT NULL,
  nota_debito_id integer NOT NULL,
  concepto character varying (200) NOT NULL,